добавила ссылку бронирования в li

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -297,9 +297,11 @@
                       <p class="item-desc-title">Стоимость (группa)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
-                    <a href="#" class="items-link" title="items-link"
-                      ><span class="item-link-title">Забронировать</span>
-                    </a>
+                    <li class="basic-info-list-link">
+                      <a href="#" class="items-link" title="items-link"
+                        ><span class="item-link-title">Забронировать</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </section>
@@ -511,7 +513,9 @@
             >
 
             <details class="item-list item-details">
-              <summary class="item-title">Урок «Мир глазами историка»</summary>
+              <summary class="item-title item-title-details">
+                Урок «Мир глазами историка»
+              </summary>
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
 
@@ -684,9 +688,11 @@
                       <p class="item-desc-title">Стоимость (группa)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
-                    <a href="#" class="items-link" title="items-link"
-                      ><span class="item-link-title">Забронировать</span>
-                    </a>
+                    <li class="basic-info-list-link">
+                      <a href="#" class="items-link" title="items-link"
+                        ><span class="item-link-title">Забронировать</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </section>
@@ -898,7 +904,9 @@
             >
 
             <details class="item-list item-details">
-              <summary class="item-title">Урок «Мир глазами историка»</summary>
+              <summary class="item-title item-title-details">
+                Урок «Мир глазами историка»
+              </summary>
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
 
@@ -1071,9 +1079,11 @@
                       <p class="item-desc-title">Стоимость (группa)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
-                    <a href="#" class="items-link" title="items-link"
-                      ><span class="item-link-title">Забронировать</span>
-                    </a>
+                    <li class="basic-info-list-link">
+                      <a href="#" class="items-link" title="items-link"
+                        ><span class="item-link-title">Забронировать</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </section>
