написала карточку экскурсии для планшетной версии отдельно от мобильной

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -108,7 +108,58 @@
         <section class="items items-container">
           <h3 class="hidden-section">section excurtions</h3>
 
-          <div class="item-cart">
+          <a
+            href="./productPage.html"
+            class="link-item-cart-desc"
+            title="item-cart"
+          >
+            <div class="item-cart">
+              <div class="item-cart-img">
+                <div class="item-cart-desc">
+                  <p class="item-age">1-4 классы</p>
+                  <p class="item-time">~ 90 мин</p>
+                </div>
+              </div>
+
+              <h4 class="item-title">Урок «Мир глазами историка»</h4>
+            </div>
+          </a>
+
+          <a
+            href="./productPage.html"
+            class="link-item-cart-desc"
+            title="item-cart"
+          >
+            <div class="item-cart">
+              <div class="item-cart-img">
+                <div class="item-cart-desc">
+                  <p class="item-age">1-4 классы</p>
+                  <p class="item-time">~ 90 мин</p>
+                </div>
+              </div>
+
+              <h4 class="item-title">Урок «Мир глазами историка»</h4>
+            </div>
+          </a>
+
+          <a
+            href="./productPage.html"
+            class="link-item-cart-desc"
+            title="item-cart"
+          >
+            <div class="item-cart">
+              <div class="item-cart-img">
+                <div class="item-cart-desc">
+                  <p class="item-age">1-4 классы</p>
+                  <p class="item-time">~ 90 мин</p>
+                </div>
+              </div>
+
+              <h4 class="item-title">Урок «Мир глазами историка»</h4>
+            </div>
+          </a>
+
+          <div class="item-cart item-cart-details">
             <div class="item-cart-img">
               <div class="item-cart-desc">
                 <p class="item-age">1-4 классы</p>
@@ -116,11 +167,7 @@
               </div>
             </div>
 
-            <a href="./productPage.html" class="item-title link-item-cart-desc"
-              >Урок «Мир глазами историка»</a
-            >
-
-            <details class="item-list item-details">
+            <details class="item-list">
               <summary class="item-title item-title-details">
                 Урок «Мир глазами историка»
               </summary>
@@ -500,7 +547,7 @@
             </details>
           </div>
 
-          <div class="item-cart">
+          <div class="item-cart item-cart-details">
             <div class="item-cart-img">
               <div class="item-cart-desc">
                 <p class="item-age">1-4 классы</p>
@@ -508,14 +555,11 @@
               </div>
             </div>
 
-            <a href="./productPage.html" class="item-title link-item-cart-desc"
-              >Урок «Мир глазами историка»</a
-            >
-
-            <details class="item-list item-details">
+            <details class="item-list">
               <summary class="item-title item-title-details">
                 Урок «Мир глазами историка»
               </summary>
+
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
 
@@ -891,7 +935,7 @@
             </details>
           </div>
 
-          <div class="item-cart">
+          <div class="item-cart item-cart-details">
             <div class="item-cart-img">
               <div class="item-cart-desc">
                 <p class="item-age">1-4 классы</p>
@@ -899,14 +943,11 @@
               </div>
             </div>
 
-            <a href="./productPage.html" class="item-title link-item-cart-desc"
-              >Урок «Мир глазами историка»</a
-            >
-
-            <details class="item-list item-details">
+            <details class="item-list">
               <summary class="item-title item-title-details">
                 Урок «Мир глазами историка»
               </summary>
+
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
 
