иcправила иконку добавления отзыва

--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -102,13 +102,11 @@
       <h1 class="hidden-section">Welcome to School Excursions reviews page</h1>
 
       <div class="container">
-        <h2 class="reviews-title">Отзывы</h2>
-
         <div class="review-form-container">
           <div class="add-review">
             <button type="button" class="btn-add-review" title="btn-add">
               <img
-                src="./img/icons-plus.png"
+                src="./img/icon-plus.png"
                 class="add-review-icon"
                 alt="add-review-icon"
               />
