добавила класс контейнер в секции на главной странице

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <main class="main">
       <h1 class="hidden-section">Welcome to School Excursions</h1>
 
-      <div class="container main-container">
-        <section class="main-info-header">
+      <div class="main-container">
+        <section class="container main-info-header">
           <h3 class="hidden-section">section excurtions info</h3>
           <div class="main-info-desc">
             <h4 class="main-info-title">Классные экскурсии</h4>
@@ -104,21 +104,24 @@
             alt="main-info-img"
           />
         </section>
-        <div class="main-text-item">
-          <h4 class="desc-title">Классные экскурсии</h4>
-          <p class="desc-text-item">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni est
-            qui iure unde, repellat perferendis exercitationem reprehenderit
-            harum? Quibusdam expedita officia iste, accusantium esse provident
-            asperiores iure quos consequuntur possimus amet repudiandae mollitia
-            quidem corporis aspernatur beatae sequi nisi saepe commodi culpa
-            quod ut architecto similique. Beatae in eum nostrum?
-          </p>
+        <div class="container">
+          <div class="main-text-item">
+            <h4 class="desc-title">Классные экскурсии</h4>
+            <p class="desc-text-item">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+              est qui iure unde, repellat perferendis exercitationem
+              reprehenderit harum? Quibusdam expedita officia iste, accusantium
+              esse provident asperiores iure quos consequuntur possimus amet
+              repudiandae mollitia quidem corporis aspernatur beatae sequi nisi
+              saepe commodi culpa quod ut architecto similique. Beatae in eum
+              nostrum?
+            </p>
+          </div>
         </div>
 
         <section class="categories">
           <h3 class="hidden-section">section excurtions categories</h3>
-          <div class="categories-container">
+          <div class="container categories-container">
             <h2 class="categories-title" id="categories">Экскурсии</h2>
             <ul class="categoties-list">
               <li class="category-line">
@@ -146,7 +149,7 @@
           </div>
         </section>
 
-        <section class="gallery">
+        <section class="container gallery">
           <h3 class="hidden-section">section excurtions gallery</h3>
           <div class="gallery-container">
             <h2 class="gallery-title">Галерея</h2>
@@ -210,7 +213,7 @@
         <section class="reviews">
           <h3 class="hidden-section">section excurtions reviews</h3>
 
-          <div class="reviews-container">
+          <div class="container reviews-container">
             <h2 class="reviews-title">Отзывы</h2>
 
             <div id="carouselExample" class="carousel slide">
