--- a/index.html
+++ b/index.html
@@ -217,8 +217,65 @@
             <h2 class="reviews-title">Отзывы</h2>
 
             <div id="carouselExample" class="carousel slide">
+              <div class="btn-carousel">
+                <button
+                  class="carousel-control-prev btn-slider"
+                  type="button"
+                  data-bs-target="#carouselExample"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon arrow-left"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next btn-slider"
+                  type="button"
+                  data-bs-target="#carouselExample"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon arrow-right"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
               <div class="carousel-inner">
                 <div class="carousel-item active">
+                  <div class="card review-cart-slider">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
                   <div class="card review-cart-slider">
                     <div class="card-body review-cart-text">
                       <h5 class="card-title review-author-name">
@@ -312,31 +369,6 @@
                   </div>
                 </div>
               </div>
-
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExample"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon arrow-left"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExample"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon arrow-right"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
           </div>
         </section>
