добавила карточку отзывов 2 в @media min-width:620px, 3 в @media min-width: 1024px

--- a/index.html
+++ b/index.html
@@ -276,7 +276,37 @@
                       </p>
                     </div>
                   </div>
-                  <div class="card review-cart-slider">
+                  <div class="card review-cart-slider second-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card review-cart-slider third-cart">
                     <div class="card-body review-cart-text">
                       <h5 class="card-title review-author-name">
                         Петров Петр Петрович
@@ -336,6 +366,66 @@
                       </p>
                     </div>
                   </div>
+                  <div class="card review-cart-slider second-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card review-cart-slider third-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
                 </div>
 
                 <div class="carousel-item">
@@ -359,6 +449,66 @@
                         Немного быстрого примера текста для построения на
                         заголовке карточки и составления основной части
                         содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card review-cart-slider second-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card review-cart-slider third-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
                       </p>
                       <p
                         class="card-subtitle mb-2 text-body-secondary review-date"
