--- a/galleryPage.html
+++ b/galleryPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Блог</title>
+    <title>Галерея</title>
 
     <!-- Bootstrap CSS для карусели -->
     <link
@@ -29,7 +29,7 @@
       <div class="container header-container">
         <nav class="nav">
           <div class="logo">
-            <a href="./index.html" class="logo-href">
+            <a href="#" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
@@ -60,13 +60,13 @@
                     </details>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Блог</a>
+                    <a href="./blogPage.html" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
                     <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
                   </li>
                   <li class="menu-list">
-                    <a href="./galleryPage.html" class="menu-link">Галерея</a>
+                    <a href="#" class="menu-link">Галерея</a>
                   </li>
                   <!--li class="menu-list">
                     <a href="#" class="menu-link">Экскурсоводы</a>
@@ -92,94 +92,106 @@
           </li>
 
           <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles-bold">Блог</a>
+            <a href="#" class="menu-link-breadcrumbles-bold">Галерея</a>
           </li>
         </ul>
       </div>
     </section>
 
     <main class="main">
-      <h1 class="hidden-section">Welcome to School Excursions blog page</h1>
+      <h1 class="hidden-section">Welcome to School Excursions page Gallery</h1>
 
-      <div class="container">
-        <div class="blog-page-container">
-          <div class="blog-cart">
-            <details class="blog-list">
-              <summary class="blog-title">Название статьи</summary>
-              <section class="blog-desc">
-                <h3 class="hidden-section">section blog desc</h3>
-
-                <p class="blog-text">
-                  Экскурсия построена по программе учебника «школа России» 4й
-                  класс Окружающий мир. Поговорим о о сложных науках «история» и
-                  «археология». Затронем и литературу. <br />Экскурсия построена
-                  по программе учебника «школа России» 4й класс Окружающий мир.
-                  Поговорим о о сложных науках «история» и «археология».
-                  Затронем и литературу.
-                </p>
-              </section>
-
-              <section class="gallery">
-                <h3 class="hidden-section">section excurtions gallery</h3>
-                <div class="gallery-container">
-                  <div
-                    id="carouselExampleAutoplaying"
-                    class="carousel slide"
-                    data-bs-ride="carousel"
-                  >
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img
-                          src="./img/item-primary-school-science1.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                      <div class="carousel-item">
-                        <img
-                          src="./img/item-primary-school-science2.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                      <div class="carousel-item">
-                        <img
-                          src="./img/item-primary-school-science3.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                    </div>
-                    <button
-                      class="carousel-control-prev"
-                      type="button"
-                      data-bs-target="#carouselExampleAutoplaying"
-                      data-bs-slide="prev"
-                    >
-                      <span
-                        class="carousel-control-prev-icon"
-                        aria-hidden="true"
-                      ></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button
-                      class="carousel-control-next"
-                      type="button"
-                      data-bs-target="#carouselExampleAutoplaying"
-                      data-bs-slide="next"
-                    >
-                      <span
-                        class="carousel-control-next-icon"
-                        aria-hidden="true"
-                      ></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
+      <div class="main-container">
+        <section class="categories">
+          <h3 class="hidden-section">section excurtions categories</h3>
+          <div class="container categories-container">
+            <h2 class="categories-title" id="categories">Экскурсии</h2>
+            <ul class="categoties-list">
+              <li class="category-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart primary-school-img">
+                    <p class="category-title">1-4 классы</p>
                   </div>
-                </div>
-              </section>
-            </details>
+                </a>
+              </li>
+              <li class="category-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart high-school-img">
+                    <p class="category-title">5-9 классы</p>
+                  </div>
+                </a>
+              </li>
+              <li class="category-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart graduation-school-img">
+                    <p class="category-title">10-11 классы</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </div>
-        </div>
+        </section>
+
+        <section class="container gallery">
+          <h3 class="hidden-section">section excurtions gallery</h3>
+          <div class="gallery-container">
+            <h2 class="gallery-title">Галерея</h2>
+
+            <div
+              id="carouselExampleAutoplaying"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./img/item-primary-school-science1.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/item-primary-school-science2.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/item-primary-school-science3.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer class="footer">
@@ -187,7 +199,7 @@
         <div class="footer-container">
           <nav class="nav">
             <div class="logo">
-              <a href="./index.html" class="logo-href">
+              <a href="#" class="logo-href">
                 <img class="logo-img" src="img/logo.png" alt="logo" />
                 <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
               </a>
@@ -222,22 +234,5 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Закрытие предыдущей карточки экскурсии при открытии следующей -->
-    <!--script>
-      const detailsOpen = document.querySelectorAll(".item-list");
-
-      // добавить к каждому клику события клика //
-      detailsOpen.forEach((el) => {
-        el.addEventListener("click", (_) => {
-          //закрыть все кроме кликнутого //
-          detailsOpen.forEach((detail) => {
-            if (detail !== el) {
-              detail.removeAttribute("open");
-            }
-          });
-        });
-      });
-    </script!-->
   </body>
 </html>
