--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -66,7 +66,7 @@
                     <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Галерея</a>
+                    <a href="./galleryPage.html" class="menu-link">Галерея</a>
                   </li>
                   <!--li class="menu-list">
                     <a href="#" class="menu-link">Экскурсоводы</a>
