добавила страницу галерея и ссылку на нее в шапке сайта

--- a/galleryPage.html
+++ b/galleryPage.html
@@ -29,7 +29,7 @@
       <div class="container header-container">
         <nav class="nav">
           <div class="logo">
-            <a href="#" class="logo-href">
+            <a href="./index.html" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
@@ -199,7 +199,7 @@
         <div class="footer-container">
           <nav class="nav">
             <div class="logo">
-              <a href="#" class="logo-href">
+              <a href="./index.html" class="logo-href">
                 <img class="logo-img" src="img/logo.png" alt="logo" />
                 <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
               </a>
