--- a/galleryPage.html
+++ b/galleryPage.html
@@ -101,97 +101,25 @@
     <main class="main">
       <h1 class="hidden-section">Welcome to School Excursions page Gallery</h1>
 
-      <div class="main-container">
-        <section class="categories">
-          <h3 class="hidden-section">section excurtions categories</h3>
-          <div class="container categories-container">
-            <h2 class="categories-title" id="categories">Экскурсии</h2>
-            <ul class="categoties-list">
-              <li class="category-line">
-                <a href="./categoryPage.html" class="category-link">
-                  <div class="category-cart primary-school-img">
-                    <p class="category-title">1-4 классы</p>
-                  </div>
-                </a>
-              </li>
-              <li class="category-line">
-                <a href="./categoryPage.html" class="category-link">
-                  <div class="category-cart high-school-img">
-                    <p class="category-title">5-9 классы</p>
-                  </div>
-                </a>
-              </li>
-              <li class="category-line">
-                <a href="./categoryPage.html" class="category-link">
-                  <div class="category-cart graduation-school-img">
-                    <p class="category-title">10-11 классы</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </section>
+      <div class="gallery-container">
+        <div class="container">
+          <h2 class="gallery-title">Галерея</h2>
 
-        <section class="container gallery">
-          <h3 class="hidden-section">section excurtions gallery</h3>
-          <div class="gallery-container">
-            <h2 class="gallery-title">Галерея</h2>
-
-            <div
-              id="carouselExampleAutoplaying"
-              class="carousel slide"
-              data-bs-ride="carousel"
-            >
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    src="./img/item-primary-school-science1.jpeg"
-                    class="d-block w-100"
-                    alt="primary-school-science"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="./img/item-primary-school-science2.jpeg"
-                    class="d-block w-100"
-                    alt="primary-school-science"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="./img/item-primary-school-science3.jpeg"
-                    class="d-block w-100"
-                    alt="primary-school-science"
-                  />
-                </div>
+          <div class="gallery-list">
+            <div class="gallery-img">
+              <img
+                src="./img/item-primary-school-science1.jpeg"
+                class="gallery-img"
+                alt="primary-school-science"
+              />
+              <p class="gallery-img-">Мир глазами историка</p>
+              title
+              <div class="overlay">
+                <a href="">Подробнее об экскурсии</a>
               </div>
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </main>
     <footer class="footer">
