прописала стили карточки галереи

--- a/galleryPage.html
+++ b/galleryPage.html
@@ -101,21 +101,28 @@
     <main class="main">
       <h1 class="hidden-section">Welcome to School Excursions page Gallery</h1>
 
-      <div class="gallery-container">
+      <div class="gallery-page-container">
         <div class="container">
           <h2 class="gallery-title">Галерея</h2>
 
           <div class="gallery-list">
-            <div class="gallery-img">
+            <div class="gallery-line">
               <img
                 src="./img/item-primary-school-science1.jpeg"
                 class="gallery-img"
                 alt="primary-school-science"
               />
-              <p class="gallery-img-">Мир глазами историка</p>
-              title
+
               <div class="overlay">
-                <a href="">Подробнее об экскурсии</a>
+                <p class="gallery-title">Мир глазами историка</p>
+                <a
+                  href="./productPage.html"
+                  class="gallery-link"
+                  title="gallery-item-link"
+                  ><span class="gallery-link-title"
+                    >Подробнее об экскурсии</span
+                  ></a
+                >
               </div>
             </div>
           </div>
