дописала стили в карточке фото галереи, убрала позиционирование и применила трансформацию

--- a/galleryPage.html
+++ b/galleryPage.html
@@ -125,6 +125,82 @@
                 >
               </div>
             </div>
+            <div class="gallery-line">
+              <img
+                src="./img/item-primary-school-science2.jpeg"
+                class="gallery-img"
+                alt="primary-school-science"
+              />
+
+              <div class="overlay">
+                <p class="gallery-title">Мир глазами историка</p>
+                <a
+                  href="./productPage.html"
+                  class="gallery-link"
+                  title="gallery-item-link"
+                  ><span class="gallery-link-title"
+                    >Подробнее об экскурсии</span
+                  ></a
+                >
+              </div>
+            </div>
+            <div class="gallery-line">
+              <img
+                src="./img/item-primary-school-science3.jpeg"
+                class="gallery-img"
+                alt="primary-school-science"
+              />
+
+              <div class="overlay">
+                <p class="gallery-title">Мир глазами историка</p>
+                <a
+                  href="./productPage.html"
+                  class="gallery-link"
+                  title="gallery-item-link"
+                  ><span class="gallery-link-title"
+                    >Подробнее об экскурсии</span
+                  ></a
+                >
+              </div>
+            </div>
+            <div class="gallery-line">
+              <img
+                src="./img/item-primary-school-science1.jpeg"
+                class="gallery-img"
+                alt="primary-school-science"
+              />
+
+              <div class="overlay">
+                <p class="gallery-title">Мир глазами историка</p>
+                <a
+                  href="./productPage.html"
+                  class="gallery-link"
+                  title="gallery-item-link"
+                  ><span class="gallery-link-title"
+                    >Подробнее об экскурсии</span
+                  ></a
+                >
+              </div>
+            </div>
+            <div class="gallery-line">
+              <img
+                src="./img/item-primary-school-science2.jpeg"
+                class="gallery-img"
+                alt="primary-school-science"
+              />
+
+              <div class="overlay">
+                <p class="gallery-title">Мир глазами историка</p>
+                <a
+                  href="./productPage.html"
+                  class="gallery-link"
+                  title="gallery-item-link"
+                  ><span class="gallery-link-title"
+                    >Подробнее об экскурсии</span
+                  ></a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </div>
