--- a/index.html
+++ b/index.html
@@ -257,18 +257,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -287,18 +285,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -349,12 +345,12 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
@@ -377,18 +373,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -407,18 +401,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -440,12 +432,12 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>Иванов Иван
                           Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
@@ -468,18 +460,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -498,18 +488,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
