на странице экскурсии в карточке отзыва убрала гида и изменила минимальную высоту на 320px

--- a/productPage.html
+++ b/productPage.html
@@ -400,18 +400,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -430,18 +428,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -492,12 +488,12 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
@@ -520,18 +516,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -550,18 +544,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -583,12 +575,12 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>Иванов Иван
                           Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
@@ -611,18 +603,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
@@ -641,18 +631,16 @@
                         >
                           Мир глазами историка
                         </h6>
-                        <h6
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h6>
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
