--- a/index.html
+++ b/index.html
@@ -159,49 +159,49 @@
               class="carousel slide"
               data-bs-ride="carousel"
             >
-              <div class="carousel-inner">
+              <div class="carousel-inner carousel-item-border">
                 <div class="carousel-item active">
                   <img
                     src="./img/item-primary-school-science1.jpeg"
-                    class="d-block w-100"
+                    class="d-block w-100 carousel-item-border"
                     alt="primary-school-science"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="./img/item-primary-school-science2.jpeg"
-                    class="d-block w-100"
+                    class="d-block w-100 carousel-item-border"
                     alt="primary-school-science"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="./img/item-primary-school-science3.jpeg"
-                    class="d-block w-100"
+                    class="d-block w-100 carousel-item-border"
                     alt="primary-school-science"
                   />
                 </div>
               </div>
               <button
-                class="carousel-control-prev"
+                class="carousel-control-prev btn-slider-gallery"
                 type="button"
                 data-bs-target="#carouselExampleAutoplaying"
                 data-bs-slide="prev"
               >
                 <span
-                  class="carousel-control-prev-icon"
+                  class="carousel-control-prev-icon arrow-left"
                   aria-hidden="true"
                 ></span>
                 <span class="visually-hidden">Previous</span>
               </button>
               <button
-                class="carousel-control-next"
+                class="carousel-control-next btn-slider-gallery"
                 type="button"
                 data-bs-target="#carouselExampleAutoplaying"
                 data-bs-slide="next"
               >
                 <span
-                  class="carousel-control-next-icon"
+                  class="carousel-control-next-icon arrow-right"
                   aria-hidden="true"
                 ></span>
                 <span class="visually-hidden">Next</span>
