провериал файлы html на валидность кода

--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -113,7 +113,7 @@
             </button>
             <div class="add-review-form">
               <h2 class="reviews-title">Оставить отзыв</h2>
-              <form action="" class="review-form">
+              <form action="#" class="review-form">
                 <input
                   type="text"
                   class="input-form"
@@ -138,6 +138,7 @@
                   name="review-desc"
                   id="form-review-text-desc"
                   rows="10"
+                  cols="30"
                   spellcheck="true"
                   wrap="hard"
                 ></textarea>
@@ -162,8 +163,8 @@
         </div>
         <div class="reviews-list">
           <div class="review-cart">
-            <h5 class="review-author-name">Петров Петр Петрович</h5>
-            <h6 class="item-name">Мир глазами историка</h6>
+            <h2 class="review-author-name">Петров Петр Петрович</h2>
+            <h2 class="item-name">Мир глазами историка</h2>
             <!--
               <h6 class="guide-name">
                 <span class="span-guide-name">Гид:</span>
@@ -183,8 +184,8 @@
             <p class="review-date">28.11.2025</p>
           </div>
           <div class="review-cart">
-            <h5 class="review-author-name">Петров Петр Петрович</h5>
-            <h6 class="item-name">Мир глазами историка</h6>
+            <h2 class="review-author-name">Петров Петр Петрович</h2>
+            <h2 class="item-name">Мир глазами историка</h2>
             <!--
               <h6 class="guide-name">
                 <span class="span-guide-name">Гид:</span>
@@ -200,8 +201,8 @@
             <p class="review-date">28.11.2025</p>
           </div>
           <div class="review-cart">
-            <h5 class="review-author-name">Петров Петр Петрович</h5>
-            <h6 class="item-name">Мир глазами историка</h6>
+            <h2 class="review-author-name">Петров Петр Петрович</h2>
+            <h2 class="item-name">Мир глазами историка</h2>
             <!--
               <h6 class="guide-name">
                 <span class="span-guide-name">Гид:</span>
@@ -217,8 +218,8 @@
             <p class="review-date">28.11.2025</p>
           </div>
           <div class="review-cart">
-            <h5 class="review-author-name">Петров Петр Петрович</h5>
-            <h6 class="item-name">Мир глазами историка</h6>
+            <h2 class="review-author-name">Петров Петр Петрович</h2>
+            <h2 class="item-name">Мир глазами историка</h2>
             <!--
               <h6 class="guide-name">
                 <span class="span-guide-name">Гид:</span>
