исправила стили в карточке отзывов, переписала секцию фото в карточке статьи на странице блога

--- a/blogPage.html
+++ b/blogPage.html
@@ -119,63 +119,32 @@
                 </p>
               </section>
 
-              <section class="gallery">
-                <h2 class="hidden-section">section excurtions gallery</h2>
-                <div class="gallery-container">
-                  <div
-                    id="carouselExampleAutoplaying"
-                    class="carousel slide"
-                    data-bs-ride="carousel"
-                  >
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img
-                          src="./img/item-primary-school-science1.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                      <div class="carousel-item">
-                        <img
-                          src="./img/item-primary-school-science2.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                      <div class="carousel-item">
-                        <img
-                          src="./img/item-primary-school-science3.jpeg"
-                          class="d-block w-100"
-                          alt="primary-school-science"
-                        />
-                      </div>
-                    </div>
-                    <button
-                      class="carousel-control-prev"
-                      type="button"
-                      data-bs-target="#carouselExampleAutoplaying"
-                      data-bs-slide="prev"
-                    >
-                      <span
-                        class="carousel-control-prev-icon"
-                        aria-hidden="true"
-                      ></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button
-                      class="carousel-control-next"
-                      type="button"
-                      data-bs-target="#carouselExampleAutoplaying"
-                      data-bs-slide="next"
-                    >
-                      <span
-                        class="carousel-control-next-icon"
-                        aria-hidden="true"
-                      ></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                </div>
+              <section class="block-imgs">
+                <h2 class="hidden-section">section block img</h2>
+                <ul class="block-img-list">
+                  <li class="block-img-line">
+                    <img
+                      src="./img/item-primary-school-science1.jpeg"
+                      class="block-img"
+                      alt="primary-school-science"
+                    />
+                  </li>
+
+                  <li class="block-img-line">
+                    <img
+                      src="./img/item-primary-school-science2.jpeg"
+                      class="block-img"
+                      alt="primary-school-science"
+                    />
+                  </li>
+                  <li class="block-img-line">
+                    <img
+                      src="./img/item-primary-school-science3.jpeg"
+                      class="block-img"
+                      alt="primary-school-science"
+                    />
+                  </li>
+                </ul>
               </section>
             </details>
           </div>
