--- a/productPage.html
+++ b/productPage.html
@@ -464,9 +464,7 @@
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
