--- a/index.html
+++ b/index.html
@@ -313,18 +313,16 @@
                         >
                           Мир глазами историка
                         </h2>
-                        <!--h2
+                        <!--h6
                           class="card-subtitle mb-2 text-body-secondary guide-name"
                         >
                           <span class="span-guide-name">Гид:</span>
                           Иванов Иван Иванович
-                        </h2!-->
+                        </h6!-->
                         <p class="card-text review-text">
                           Немного быстрого примера текста для построения на
                           заголовке карточки и составления основной части
-                          содержимого карточки. Немного быстрого примера текста
-                          для построения на заголовке карточки и составления
-                          основной части содержимого карточки.
+                          содержимого карточки.
                         </p>
                         <p
                           class="card-subtitle mb-2 text-body-secondary review-date"
