--- a/index.html
+++ b/index.html
@@ -85,24 +85,26 @@
       <h1 class="hidden-section">Welcome to School Excursions</h1>
 
       <div class="main-container">
-        <section class="container main-info-header">
+        <section class="main-info-header">
           <h2 class="hidden-section">section excurtions info</h2>
-          <div class="main-info-desc">
-            <h2 class="main-info-title">Классные экскурсии</h2>
-            <p class="main-info-text">
-              Место для слогана сайте Место для слогана сайте Место для слогана
-              сайте
-            </p>
-            <a href="#categories" class="link-choose-item" title="items-link"
-              ><span class="item-link-title">Выбрать экскурсию</span>
-            </a>
-          </div>
+          <div class="container main-info-container">
+            <div class="main-info-desc">
+              <h2 class="main-info-title">Классные экскурсии</h2>
+              <p class="main-info-text">
+                Место для слогана сайте Место для слогана сайте Место для
+                слогана сайте
+              </p>
+              <a href="#categories" class="link-choose-item" title="items-link"
+                ><span class="item-link-title">Выбрать экскурсию</span>
+              </a>
+            </div>
 
-          <img
-            src="./img/main-info-img.jpg"
-            class="main-info-img"
-            alt="main-info-img"
-          />
+            <img
+              src="./img/main-info-img.jpg"
+              class="main-info-img"
+              alt="main-info-img"
+            />
+          </div>
         </section>
         <div class="container">
           <div class="main-text-item">
